<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">消防水箱监控系统</string>
    <string name="hello_world">Hello world!</string>
    <string name="settings">设置</string>
    <string name="about">关于</string>
    <string name="title_activity_login">登陆</string>
    <string name="adminid">管理员ID</string>
    <string name="password">密码</string>
    <string name="login">登陆</string>
    <string name="admin_id_not_blank">管理员ID不能为空</string>
    <string name="password_not_blank">密码不能为空</string>
    <string name="accept">确定</string>
    <string name="about_content">消防水箱远程监控系统©2015</string>
    <string name="log">日志</string>
    <string name="title_activity_main">概况</string>
    <string name="require_data_error">数据获取出错</string>
    <string name="require_error">请求错误</string>
    <string name="server_connect_error">服务器连接错误</string>
    <string name="cannot_connect_to_the_network">无法连接网络,请确认网络是否打开</string>
    <string name="waiting">请稍后......</string>
    <string name="logout">注销</string>
    <string name="title_activity_welcome">欢迎</string>
    <string name="app_full_name">消防水箱远程监控系统</string>
    <string name="connect_error">连接错误</string>
    <string name="exit">退出</string>
    <string name="retry">重试</string>
    <string name="help">帮助</string>
    <string name="exit_the_app">是否退出应用</string>
    <string name="cancel">取消</string>
    <string name="no_data">无数据</string>
    <string name="water_gage_low">水压较低</string>
    <string name="water_gage_normal">水压正常</string>
    <string name="water_level_low">水位过低</string>
    <string name="water_level_normal">水位正常</string>
    <string name="water_level_too_low">水位过低</string>
    <string name="water_tank">水箱</string>
    <string name="title_activity_detail">详细</string>
    <string name="title_activity_log">日志</string>
    <string name="title_activity_help">帮助</string>
    <string name="title_activity_setting">设置</string>
    <string name="action_settings">设置</string>
    <string name="server_address">服务器地址</string>
    <string name="default_server_address">http://192.168.1.103/TanksMS/</string>
    <string name="app_setting">程序设置</string>
    <string name="app_name_setting">设置|消防水箱监控系统</string>

</resources>
