<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="cn.edu.njupt.tanksms.ui.LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/primary_color_green_light">

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentBottom="true"
        android:background="@color/background_color_white"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_color_white">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@color/background_color_white">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/t_username"
                    android:hint="@string/adminid"
                    android:inputType="number"
                    android:layout_margin="6dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true"
                    android:textCursorDrawable="@drawable/text_cursor_green"
                    app:floatingLabel="highlight"
                    app:baseColor="@android:color/black"
                    app:primaryColor="@color/primary_color_green_dark"
                    app:errorColor="@android:color/holo_red_dark"
                    app:singleLineEllipsis="true"
                    />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/t_password"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textCursorDrawable="@drawable/text_cursor_green"
                    app:floatingLabel="highlight"
                    app:baseColor="@android:color/black"
                    app:primaryColor="@color/primary_color_green_dark"
                    app:errorColor="@android:color/holo_red_dark"
                    app:singleLineEllipsis="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/t_username"
                    android:layout_margin="6dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

                <cn.edu.njupt.tanksms.widget.MyRectangleButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/b_login"
                    android:layout_below="@+id/t_password"
                    android:text="@string/login"
                    android:layout_marginTop="36dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
