<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="cn.edu.njupt.tanksms.ui.SettingActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/primary_color_green_light">

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView_back"
        android:src="@drawable/abc_ic_ab_back_mtrl_am_alpha"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/toolbar"
        android:minWidth="?attr/actionBarSize"
        android:scaleType="center"
        android:background="@color/primary_color_green_light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:layout_below="@+id/toolbar"
        android:padding="12dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:layout_marginBottom="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/server_address"
                android:textColor="@color/primary_color_green_dark" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/primary_color_green_light" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/t_server_address"
                android:hint="@string/default_server_address"
                android:inputType="textUri"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:textCursorDrawable="@drawable/text_cursor_green"
                app:floatingLabel="none"
                app:baseColor="@android:color/black"
                app:primaryColor="@color/primary_color_green_dark"
                app:errorColor="@android:color/holo_red_dark"
                app:singleLineEllipsis="true"
                android:layout_marginTop="12dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:layout_marginBottom="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/app_setting"
                android:textColor="@color/primary_color_green_dark" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/primary_color_green_light" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="6dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="刷新间隔（秒）"
                android:id="@+id/textView"
                android:textColor="@android:color/darker_gray"
                android:singleLine="false"
                android:layout_marginBottom="6dp" />

            <com.gc.materialdesign.views.Slider
                android:id="@+id/slider_refresh_time"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:background="@color/primary_color_green_light"
                app:max="50"
                app:min="2"
                app:showNumberIndicator="true"
                android:layout_marginBottom="6dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="其他"
                android:id="@+id/textView2"
                android:textColor="@android:color/darker_gray"
                android:singleLine="false"
                android:layout_marginBottom="6dp" />

        </LinearLayout>




        </LinearLayout>

</RelativeLayout>
